--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="on_boarding_skip">Skip</string>
+    <string name="title_curweather">Current Weather</string>
+    <string name="title_daily_forecast">Daily Forecast</string>
 </resources>
